[gd_scene load_steps=12 format=3 uid="uid://c6a11no5re6pj"]

[ext_resource type="Script" path="res://Scripts/DrumSession/left_arrow.gd" id="1_wee58"]
[ext_resource type="Texture2D" uid="uid://cqvt0nbbrvnqd" path="res://Sprites/Drum Session/Drum Road/Kick.png" id="2_asr4a"]
[ext_resource type="PackedScene" uid="uid://bgcncg7lxmrjj" path="res://Scenes/DrumSession/beat.tscn" id="3_ymi20"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8k6ls"]
atlas = ExtResource("2_asr4a")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gjrn"]
atlas = ExtResource("2_asr4a")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_myo0g"]
atlas = ExtResource("2_asr4a")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5co24"]
atlas = ExtResource("2_asr4a")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8j888"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8k6ls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gjrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myo0g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5co24")
}],
"loop": false,
"name": &"KickPressed",
"speed": 14.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4udk8"]
size = Vector2(4, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cxol4"]
size = Vector2(10, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_auqu5"]
size = Vector2(20, 18)

[node name="LeftArrow" type="Node2D"]
script = ExtResource("1_wee58")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -3)
texture = ExtResource("2_asr4a")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_8j888")
animation = &"KickPressed"
frame = 3
frame_progress = 1.0

[node name="Perfect" type="Area2D" parent="."]
position = Vector2(1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perfect"]
position = Vector2(-1, 1)
rotation = 1.5708
shape = SubResource("RectangleShape2D_4udk8")
debug_color = Color(0, 0.65098, 0.0862745, 0.419608)

[node name="Good" type="Area2D" parent="."]
position = Vector2(1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Good"]
position = Vector2(-0.999996, 1)
rotation = 1.5708
shape = SubResource("RectangleShape2D_cxol4")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Ok" type="Area2D" parent="."]
position = Vector2(1, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ok"]
position = Vector2(-1, 1)
rotation = 1.5708
shape = SubResource("RectangleShape2D_auqu5")
debug_color = Color(0.972549, 0, 0.45098, 0.419608)

[node name="Beat" parent="." instance=ExtResource("3_ymi20")]
visible = false
position = Vector2(0, 7)
rotation = 1.5708

[node name="Beat2" parent="." instance=ExtResource("3_ymi20")]
visible = false
position = Vector2(0, -25)
rotation = 1.5708

[node name="Beat9" parent="." instance=ExtResource("3_ymi20")]
visible = false
position = Vector2(0, -41)
rotation = 1.5708

[node name="Beat10" parent="." instance=ExtResource("3_ymi20")]
visible = false
position = Vector2(0, -9)
rotation = 1.5708

[connection signal="area_entered" from="Perfect" to="." method="_on_perfect_area_entered"]
[connection signal="area_exited" from="Perfect" to="." method="_on_perfect_area_exited"]
[connection signal="area_entered" from="Good" to="." method="_on_good_area_entered"]
[connection signal="area_exited" from="Good" to="." method="_on_good_area_exited"]
[connection signal="area_entered" from="Ok" to="." method="_on_ok_area_entered"]
[connection signal="area_exited" from="Ok" to="." method="_on_ok_area_exited"]
